added data to gitignore

--- a/Homework 8 Primary Notebook.ipynb
+++ b/Homework 8 Primary Notebook.ipynb
@@ -45,40 +45,33 @@
   },
   {
    "cell_type": "markdown",
-   "id": "500f5793",
+   "id": "c3672803-0634-491f-92ec-1e8cdd4250d9",
    "metadata": {},
    "source": [
     "In the first part of the assignment you will do the following:\n",
-    "\r\n",
-    "● Prepare the data (5 points). Get two large text files: one English file (WikiText-103,\r\n",
-    "181MB) and one Spanish file (e.g. Spanish text corpus, 155MB). Convert to lowercase\r\n",
-    "and remove all punctuation except “.” so the data only contains alphabet characters,\r\n",
-    "whitespace, and periods. Determine a set of unique characters and map all characters\r\n",
-    "to integers. Split the data into train & validation sets, and split each into individual\r\n",
-    "sentences. You may reuse your work from lasswassignment.\n",
+    "\n",
+    "● Prepare the data (5 points). Get two large text files: one English file (WikiText-103,\n",
+    "181MB) and one Spanish file (e.g. Spanish text corpus, 155MB). Convert to lowercase\n",
+    "and remove all punctuation except “.” so the data only contains alphabet characters,\n",
+    "whitespace, and periods. Determine a set of unique characters and map all characters\n",
+    "to integers. Split the data into train & validation sets, and split each into individual\n",
+    "sentences. You may reuse your work last week. \n",
+    "\n",
+    "    \n",
+    "● Train 1-layer model (15 Points). Define a Transformer model containing 1 Transformer\n",
+    "encoder layer followed by an output linear layer. Your model should classify a fixedlength sequence of characters as English or Spanish. Show your trainlng & validation\n",
+    "loss curves, along with your validation classification accuracy. Compare your results to the LSTM model last week and comment.\n",
     "\n",
     "\n",
+    "● Experimentation (10 points). Experiment with one aspect of the model: the number of\n",
+    "Transformer layers, encoder vs decoder layers, the size of the hidden layer, etc. Train the\n",
+    "corresponding models, compare their performance, and provide plots to demonstrate\n",
+    "the effect of the hyperparameters of interest. \n",
     "\n",
-    "nment.\r\n",
-    "● Train 1-layer model (15 Points). Define a Transformer model containing 1 Transformer\r\n",
-    "encoder layer followed by an output linear layer. Your model should classify a fixedlength sequence of characters as English or Spanish. Show your training & va idation\r\n",
-    "loss curves, along with your validation classification accuracy. Compare your results to\r\n",
-    "the LSTM model feek and comment.\n",
-    "\n",
-    "\n",
-    "\n",
-    "d comment.\r\n",
-    "● Experimentation (10 points). Experiment with one aspect of the model: the number of\r\n",
-    "Transformer layers, encoder vs decoder layers, the size of the hidden layer, etc. Train the\r\n",
-    "corresponding models, compare their performance, and provide plots to demonstrate\r\n",
-    "the effect of the hyperparamete\n",
-    "\n",
-    "\n",
-    "\n",
-    "r of interest.\r\n",
-    "● Intuition (5 points). Show the output of your model for several specific sentences. Pick\r\n",
-    "inputs that demonstrate the behavior of the system, and try to figure out what things\r\n",
-    "the model is focusing on. Explain your intuition about what the model is doing"
+    "    \n",
+    "● Intuition (5 points). Show the output of your model for several specific sentences. Pick\n",
+    "inputs that demonstrate the behavior of the system, and try to figure out what things\n",
+    "the model is focusing on. Explain your intuition about what the model is doing.\n"
    ]
   },
   {
@@ -114,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "b3c55296",
    "metadata": {},
    "outputs": [],
@@ -137,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "f0a6b3af",
    "metadata": {},
    "outputs": [
@@ -165,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "14dfe95d",
    "metadata": {},
    "outputs": [
@@ -240,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "448f084c",
    "metadata": {},
    "outputs": [
@@ -377,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "bebcbcea",
    "metadata": {},
    "outputs": [
@@ -459,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "c357df36",
    "metadata": {},
    "outputs": [
@@ -524,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "ba4a84ca",
    "metadata": {},
    "outputs": [],
@@ -604,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "e4434b62",
    "metadata": {},
    "outputs": [
@@ -616,11 +609,16 @@
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Training: 100%|█████████████████████████████████████████████████████████████████| 7017/7017 [00:00<00:00, 18777.77it/s]\n",
-      "Validation: 100%|███████████████████████████████████████████████████████████████| 3008/3008 [00:00<00:00, 92058.74it/s]\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'Data/EnglishSentences.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[17], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m batch_size \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1024\u001b[39m\n\u001b[0;32m      5\u001b[0m num_workers \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m----> 6\u001b[0m train_loader, val_loader \u001b[38;5;241m=\u001b[39m \u001b[43mget_train_val_loaders\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdataset_proportion\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mval_split\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_workers\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[16], line 15\u001b[0m, in \u001b[0;36mget_train_val_loaders\u001b[1;34m(dataset_proportion, val_split, batch_size, num_workers)\u001b[0m\n\u001b[0;32m     12\u001b[0m spanish_file \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mData/ProcessedSpanishSentences.txt\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mReading the files.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 15\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43menglish_file\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mencoding\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mutf-8\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m     16\u001b[0m     english_sentences \u001b[38;5;241m=\u001b[39m file\u001b[38;5;241m.\u001b[39mreadlines()\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(spanish_file, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:286\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    279\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    280\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    281\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    282\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    283\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    284\u001b[0m     )\n\u001b[1;32m--> 286\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'Data/EnglishSentences.txt'"
      ]
     }
    ],
@@ -638,8 +636,8 @@
    "id": "821f00f3",
    "metadata": {},
    "source": [
-    "# SUMMARY OF PART 1:\n",
-    "### In Part 1, we preprocessed the dataset so that it only consisted of lowercase letters, whitespaces, and periods. Then, we made a unique character map and made a validation and training dataset using the DataLoader class, and we also padded each sentence so that all sentences have a length of 100 characters. "
+    "# SUMMARY OF Question 1 PART 1:\n",
+    "### In Part 1, we preprocessed the dataset so that it only consisted of lowercase letters, whitespaces, and periods. Then, we made a unique character map and made a validation and training dataset using the DataLoader class, and we also padded each sentence so that all sentences have a length of 100 characters. This is the exact same as in the last homework. "
    ]
   },
   {
@@ -647,16 +645,16 @@
    "id": "1dad4d40",
    "metadata": {},
    "source": [
-    "# Training a LSTM (20 Points)\n",
+    "# Train 1-layer model (15 Points).\n",
     "\n",
-    "Here, we do the following: Define an LSTM model containing 1 LSTM layer \n",
-    "followed by an output linear layer. Your model should classify a fixed-length sequence \n",
-    "of characters as English or Spanish. Show your training & validation loss curves, along \n",
-    "with your validation classification accuracy.\n",
+    "Define a Transformer model containing 1 Transformer\r\n",
+    "encoder layer followed by an output linear layer. Your model should classify a fixedlength sequence of characters as English or Spanish. Show your training & validatio \r\n",
+    "loss curves, along with your validation classification accuracy. Compare your results to\r\n",
+    "the LSTM model from last week and comment.\n",
     "\n",
     "\n",
     "\n",
-    "### Below, we define our 1-Layer LSTM Model as specified in the problem. "
+    "### Below, we define oTransformer model. m. "
    ]
   },
   {
@@ -664,48 +662,62 @@
    "execution_count": 9,
    "id": "82651ba7",
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'nn' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mTransformer_1\u001b[39;00m(\u001b[43mnn\u001b[49m\u001b[38;5;241m.\u001b[39mModule):\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, num_embeddings, embedding_dim, hidden_dim, nhead, dropout\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.5\u001b[39m):\n\u001b[0;32m      3\u001b[0m         \u001b[38;5;28msuper\u001b[39m(Transformer_1, \u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'nn' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "class Transformer_1(nn.Module):\n",
+    "    def __init__(self, num_embeddings, embedding_dim, hidden_dim, nhead, dropout=0.5):\n",
+    "        super(Transformer_1, self).__init__()\n",
+    "        \n",
+    "        self.emb = nn.Embedding(num_embeddings=num_embeddings, \n",
+    "                                embedding_dim=embedding_dim)\n",
+    "        \n",
+    "        # Define a single transformer encoder layer\n",
+    "        encoder_layer = nn.TransformerEncoderLayer(d_model=embedding_dim, \n",
+    "                                                   nhead=nhead, \n",
+    "                                                   dim_feedforward=hidden_dim, \n",
+    "                                                   dropout=dropout)\n",
+    "        self.transformer_encoder = nn.TransformerEncoder(encoder_layer, num_layers=1)\n",
+    "        \n",
+    "        # Output layer\n",
+    "        self.out = nn.Linear(embedding_dim, 1) \n",
+    "        \n",
+    "    def forward(self, inp):\n",
+    "        embeds = self.emb(inp) \n",
+    "        # Note: For Transformer, input needs to be of shape: sequence length x batch size x embedding dim\n",
+    "        embeds_swapped = embeds.permute(1, 0, 2)\n",
+    "        transformer_out = self.transformer_encoder(embeds_swapped)\n",
+    "        scores = self.out(transformer_out)\n",
+    "        scores_swapped = scores.permute(1, 0, 2) \n",
+    "        return scores_swapped\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50678a8d-b1c0-4607-b773-6e19d7e4b220",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "class LSTM_1Layer(nn.Module):\n",
-    "    #This is our LSTM with 1 later followed by an output layer\n",
-    "    #This classifies a fixed-length (100 length) sequence of characters as English or Spanish\n",
-    "    def __init__(self, num_embeddings, embedding_dim, hidden_dim, dropout=0.5):\n",
-    "        super(LSTM_1Layer, self).__init__()\n",
-    "        self.num_lstm_layers = 1\n",
-    "        #We follow the structure of lecture's LSTM here\n",
-    "        \n",
-    "        \n",
-    "        #https://pytorch.org/docs/stable/generated/torch.nn.Embedding.html\n",
-    "        #Embedding layer as described in lecture\n",
-    "        self.emb = nn.Embedding(num_embeddings = num_embeddings, #This is the length of our dictionary\n",
-    "                           embedding_dim = embedding_dim) #Size of embedding vector (our choice)\n",
-    "        \n",
-    "        #https://pytorch.org/docs/stable/generated/torch.nn.LSTM.html\n",
-    "        #LSTM has following Form:\n",
-    "        #nn.LSTM(embedding_dim, hidden_dim, n_layers, batch_first=True, dropout=drop_prob)\n",
-    "        self.lstm = nn.LSTM(embedding_dim, #The input is the output of the embedding\n",
-    "                            hidden_dim, #Hidden dimension parameter to change\n",
-    "                            1, # 1 Layer LSTM Model - will change in future\n",
-    "                            #batch_first=True, #interesting param, breaks everything\n",
-    "                            dropout=dropout) #Dropout probability\n",
-    "        \n",
-    "        \n",
-    "        self.out = nn.Linear(hidden_dim, 1) #Takes in hidden_dim, doesn't use sigmoid? output is 1 dimensional\n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "    def forward(self, inp, state_in):  #inp is batch x seq. state_in is (h_n, c_n)\n",
-    "        #Following the structure given in lecture\n",
-    "        embeds = self.emb(inp) #embeds is batch x seq x emb_dim\n",
-    "        embeds_swapped = embeds.permute(1,0,2) #seq x batch x batch_dim\n",
-    "        lstm_out, state_out = self.lstm(embeds_swapped, state_in) #lstm_out is seq x batch x hidden\n",
-    "        #state_out is (h_n, c_n)\n",
-    "        scores = self.out(lstm_out) #scores is seq x batch x numclasses\n",
-    "        scores_swapped = scores.permute(1, 0,2) #batch x seq x numclasses\n",
-    "        return scores_swapped, state_out #\n",
-    "        \n",
-    "        \n",
-    "        #no sigmoid?\n"
+    "# Get the model\n",
+    "model = Transformer_1(num_embeddings=1000, \n",
+    "                      embedding_dim=512, \n",
+    "                      hidden_dim=2048, \n",
+    "                      nhead=8)\n",
+    "print(model)"
    ]
   },
   {
