last sentences, good to go

--- a/Homework 8 Primary Notebook.ipynb
+++ b/Homework 8 Primary Notebook.ipynb
@@ -4321,28 +4321,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a26bcc1-72c6-48aa-9ac6-6052914c2efd",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ac869202",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d063443c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "356b0e1e",
    "metadata": {},
    "source": [
@@ -4705,12 +4683,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f002384-a566-42b9-87ae-0eea5f173dea",
+   "cell_type": "markdown",
+   "id": "01cc0534-fa2c-413d-846c-a79236f35890",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## We validated the accuracy of our prompt on 1000 sentences and achieved an accuracy of 97.1%. This accuracy is comparable to our accuracies in part 1 and 2, which were 96.4% and 98.5%. Our ChatGPT accuracy falls between them, although we believe that if we were willing to spend more tokens to classify longer sentences and also give a more detailed prompt, our OpenAI accuracy would be much higher. However, in order to conserve tokens and also for the sake of brevity, we our 97% OpenAI accuracy is more than sufficient to demonstrate our success at prompting OpenAI to classify sentences. "
+   ]
   },
   {
    "cell_type": "code",
@@ -4729,12 +4707,12 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f8974363-dc63-4bcb-b7a8-8f4963e1fd05",
+   "cell_type": "markdown",
+   "id": "1feb2b5f-00b2-48e0-b6ea-377c6a7574b5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# We have successfully completed all parts of this assignment by training and experimenting with Transformer models, training a Linear Probe based on the outputs of a BERT model, and then engineering a prompt to query OpenAI to classify the language of the sentences. All of our techniques achieved an accuracy greater than 95%, which shows that we have been successful in exploring different ways to classify sentences. "
+   ]
   },
   {
    "cell_type": "code",
