--- a/Homework 8 Primary Notebook.ipynb
+++ b/Homework 8 Primary Notebook.ipynb
@@ -699,7 +699,7 @@
    "id": "aff77e7d",
    "metadata": {},
    "source": [
-    "## In the cell below, we train our LSTM model using a similar function to the one we made in HW6, and we also show our validation and training curves. We were able to get a pretty high accuracy!"
+    "## In the cell below, we train our Transformer  model using a similar function to the one we made in HW7, and we also show our validation and training curves. We were able to get a pretty high accuracy!"
    ]
   },
   {
@@ -3304,8 +3304,21 @@
     "\n",
     "### Let's talk about the effect of the hyperparameters on the model's performance. \n",
     "\n",
-    "\n",
-    "[INPUT VIVIANE's ANALYSIS HERE]\n",
+    "While these plots experiments with how final validation accuracy changes with the number of hidden dimensions, number of encoder layers, and number of decoder layers, we concretely only change the number of encoder layers from 1, 2 and 3 between plots\r\n",
+    "\r\n",
+    "\r\n",
+    "\r\n",
+    "We see that in the first plot, which has 1 encoder layer, hidden dim = 128 and hidden dim = 64 achieve higher accuracy ~95% with 0 decoder layers, while the hidden dim = 32 achieves a lower accuracy of 93.8%. When we add more decoder layer from 0 to 1, we see that the hidden dim = 64 increases the validation accuracy from ~95% to ~95.5%. We also see that the hidden dim = 128 decreases from 95%  to 94%. We also see that hidden dim = 32 increases from 93.5% to 94.75%. When we add even more decoder layers from 1 to 2, all of the numbers of hidden dims decrease. For hidden dim = 64 it decreases from ~95.5% to ~95.25%. For hidden dim = 32, it decreases from 94.75% to ~93.5%. For hidden dim = 128, it decreases from 95% to ~93%. Thus, based off this plot for # encoder layers = 1, we see that hidden dim = 128 and hidden dim = 64 achieve the most accuracy, especially when # of decoder layers = 0. The highest accuracy achieved in the entire plot was for hidden dim = 64 at # decoder layer = 1.  \r\n",
+    "\r\n",
+    "\r\n",
+    "\r\n",
+    "\r\n",
+    "\r\n",
+    "We see that in the second plot, which has 2 encoder layers, all three hidden dims achieve high validation accuracy when there are 0 decoder layers. For hidden dim = 64 and hidden dim = 32, the accuracy improves from 94.25% at decoder layer = 0 to 94.75% at decoder layer = 2. For hidden dim = 128, the accuracy decreases from 95% to to 92% from # decoder layers 0 to 2. \r\n",
+    "\r\n",
+    "\r\n",
+    "\r\n",
+    "Finally, we see in our third plot, which has 3 encoder layers, we see the highest validation accuracy for hidden dim = 64 with 0 decoder layers at 95.75%. This is the highest accuracy of any of the plots (for any number of encoder layers), at any point. After this point, all of the validation accuracies decrease with increased decoder layers. \n",
     "\n"
    ]
   },
@@ -3314,7 +3327,29 @@
    "id": "1af293f4",
    "metadata": {},
    "source": [
-    "# Intuition (5 points). Show the output of your model for several specific sentences. Pick inputs that demonstrate the behavior of the system, and try to figure out what things the model is focusing on. Explain your intuition about what the model is doing."
+    "# Intuition (5 points). Show the output of your model for several specific sentences. Pick inputs that demonstrate the behavior of the system, and try to figure out what things the model is focusing on. Explain your intuition about what the model is doing.\n",
+    "\n",
+    "In the first example sentence ‘the’, we get a model output of -1.4925, which indicates that the phrase is in English. In the next example sentence ‘the the the […]” gets a model output of -4.58, which suggests even higher certainty than before that the phrase is English.\r\n",
+    "\r\n",
+    "In the fourth example sentence ‘que’ , we get a model output of 4.9, which indicates that the phrase is likely Spanish. The same pattern as before exists: for the fifth example sentence’ que que que […]” gets a model output of 5, which is higher than when the phrase was shorter. This suggests that the more words there are, the greater confidence the model has in whether the phrase is in English or in Spanis\n",
+    "\r\n",
+    "\r\n",
+    "\r\n",
+    "\r\n",
+    "\r\n",
+    "Next, we see that ‘what que’ gives us a model output of -2.12 which indicates that the model thinks that the phrase is English. Compared with ‘que what’ , which gives us a model output of -2.12, which also indicates that the model thinks that the phrase is in English. Here, where both of these phrases are shorter, it appears that the order of the phrase does not impact the modeluput.\r\n",
+    "\r\n",
+    "\r\n",
+    "\r\n",
+    "\r\n",
+    "\r\n",
+    "Next, in phrases with accents, such as “áéíóúñü” there is greater model confidence that the phrase is in Spanish. This is likely because there are few to no accents used in the English language, versus there being a few in Spanish. While “what” has a model output of -3.9 (English), “whát” only has a model output of -1.1. Even though this output suggests that the model thinks that the phrase is in English, there is a lesser degree of certainty that when there was an accent.\r\n",
+    "\r\n",
+    "\r\n",
+    "\r\n",
+    "\r\n",
+    "\r\n",
+    "Thus, we see that accents in a phrase increase the certainty of the model that a phrase is in Spanish, or decrease its certainty that a phrase is in English. It also seems that the model has a greater memory, as the order of words in a phrase does not affect the model output (as seen in ‘what que’ and ‘que what’)\n"
    ]
   },
   {
@@ -4350,24 +4385,71 @@
    "source": [
     "## Design prompt (5 points). Experiment with different prompts to find a suitable prompt for the English/Spanish classification task that we are interested in. Provide examples from your prompt experiments and indicate the final prompt you settled on. \n",
     "\n",
-    "In the cell below, we show many of the prompts we experimented with. "
+    "\n",
+    "### We used the following notes when designing our prompt. \n",
+    "\n",
+    "Notes from Prompting Guidelines from OpenAI course:\r\n",
+    "\r\n",
+    "1 - Writing clear and specific instructions. clear ≠ short.\r\n",
+    " - use delimiters: triple quotes \"\"\", triple backticks ```, triple dashes ---, angle brackets < >, and XML tags < tag > < /tag > to make it clear to the model what is part of the input.\r\n",
+    "\r\n",
+    "- Ask for structured output\r\n",
+    "in HTML or JSON which can then be read into a dictionary or list\r\n",
+    "\r\n",
+    "- Check whether conditions are satisfied. Check assumptions required to do the task\r\n",
+    "\r\n",
+    "- Few-shot prompting. Give the model successful examples of completing tasks, then ask the model to perform the task\r\n",
+    "\r\n",
+    "2 - Give the model time to think. If a task is too complex, we can instruct the model to take longer to complete the task.\r\n",
+    "- Specify the steps to complete a task (Step 1, Step 2, ...)\r\n",
+    "- Instruct the model to work out its own solution before jumping to a conclusion. Make sure that it describes the steps of its work.\r\n",
+    "\r\n",
+    "**MODEL LIMITATIONS:**\r\n",
+    "\r\n",
+    "Hallucinations/Fabrication of Ideas: Makes statements that sound plausible but are not true.\r\n",
+    "- To reduce hallucinations, make the model first find relevant information (ex: quotes from text), then answer the question based on the relevant information.\r\n",
+    "\r\n",
+    "Notes from Iterative Prompt Development\r\n",
+    "\r\n",
+    "- be clear & specific\r\n",
+    "- analyze why the result does not give a desired output\r\n",
+    "- refine the idea and the prompt with a batch of examples. clarify instructions, give more time to think.\r\n",
+    "-repeat prompts with a batch of examples.\r\n",
+    "\r\n",
+    "\r\n",
+    "**Summarizing** by giving character or word limits, character limits, sentence limits, etc as well as choosing a particular focus\r\n",
+    "\r\n",
+    "**Inferring:** analysis by extraction from text. Identify types of emotion, make inferences from the text.\r\n",
+    "\r\n",
+    "**Transforming**: language translation, spelling and grammar checking, tone adjustment, and for converting formats\r\n",
+    "\r\n",
+    "**Expanding** a shorter text to a longer text. Remind the model to use details from the original input. \r\n",
+    "- Temperature = 0 for reliability \r\n",
+    "- Highey of the prompts we experimented with. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff09ad76-3f22-42a7-be31-7e32cbe715d8",
+   "metadata": {},
+   "source": [
+    "# When designing our prompt, we set our temperature to 0 to have a high reliability. Furthermore, we separated our sentence with delimiters, and we told it to answer in a structured response. We decided not to use few-shot prompting in order to conserve tokens and also because our task is very simple. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 143,
    "id": "06f32d8d",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Brandon's OpenAI Key:\n",
-    "key = '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'\n",
-    "#PLEASE DELETE THIS KEY BEFORE SUBMITTING"
+    "key = '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'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 150,
    "id": "3e92dfc3",
    "metadata": {},
    "outputs": [],
@@ -4389,7 +4471,56 @@
     "        messages=messages,\n",
     "        temperature=temperature, \n",
     "    )\n",
-    "    return response.choices[0].message[\"content\"]"
+    "    return response.choices[0].message[\"content\"]\n",
+    "\n",
+    "\n",
+    "#Below are many of the prompts that we experimented with. \n",
+    "\n",
+    "sentence = \"Hi my name is joe\"\n",
+    "\n",
+    "\n",
+    "prompt = f\"\"\"\n",
+    "The following sentence is in either English or Spanish. What language is it in? Answer in a single word please.  \n",
+    "```{sentence}```\n",
+    "\"\"\"\n",
+    "#print(get_completion(prompt))\n",
+    "\n",
+    "prompt = f\"\"\"\n",
+    "What language is the following sentence? \n",
+    "{sentence}\n",
+    "\"\"\"\n",
+    "#print(get_completion(prompt))\n",
+    "\n",
+    "prompt = f\"\"\"\n",
+    "The following sentence is in either English or Spanish. What language is it in? Answer in a single word please. \n",
+    "{sentence}\n",
+    "\"\"\"\n",
+    "#print(get_completion(prompt))\n",
+    "\n",
+    "prompt = f\"\"\"\n",
+    "What language is the following sentence? For example, the sentence ```hi my name is Joe``` is in English, and ```hola me llamo Joe``` is in Spanish: \n",
+    "{sentence}\n",
+    "\"\"\"\n",
+    "#print(get_completion(prompt))\n",
+    "\n",
+    "\n",
+    "\n",
+    "#The print statements are commented out for readability\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e4ab10c-ba07-47b5-9b08-262430632f33",
+   "metadata": {},
+   "source": [
+    "## The final prompt that we settled on is: \n",
+    "\n",
+    "prompt = f\"\"\"\n",
+    "The following sentence is in either English or Spanish. What language is it in? Answer in a single word please.  \n",
+    "```{sentence}```\n",
+    "\"\"\"\n",
+    "\n",
+    "## This is because this prompt is short, uses delimiters, asks for a structured response in a single word, and does not use too many tokens. We decided to use this prompt with a Temperature of 0 to have a high reliability. \n"
    ]
   },
   {
