--- a/Homework 8 Primary Notebook.ipynb
+++ b/Homework 8 Primary Notebook.ipynb
@@ -3758,8 +3758,6 @@
    "id": "43ccb3aa-4103-4258-99f5-43bdaf17f726",
    "metadata": {},
    "source": [
-    "### INPUT VIVI'S INTUITION HERE\n",
-    "\n",
     "\n",
     "### In the first example sentence ‘the’, we get a model output of -3.2, which indicates that the phrase is in English. In the next example sentence ‘the the the […]” gets a model output of -6, which suggests even higher certainty than before that the phrase is English.\n",
     "\n",
@@ -3788,11 +3786,11 @@
     "\n",
     "2. Using the training and validation data loaders, we trained a transformer model with a single encoder layer on 1% of the dataset to get an accuracy of around 97%. This shows that we have trained a successful model on the data.\n",
     "\n",
-    "3. Then, we tuned many hyperparameters and found that a 0 Decoder Layer, 3-Enconder Layer model with a hidden dimension size of 64 had the highest validation accuracy out of all the models we tested. We also found the interesing result ... [INPUT EXPERIMENTATION ANALYSIS HERE]\n",
+    "3. Then, we tuned many hyperparameters and found that a 0 Decoder Layer, 3-Enconder Layer model with a hidden dimension size of 64 had the highest validation accuracy out of all the models we tested. Something interesting we found was that, when you are using decoder layers, you either want to have no decoder layers or more than 1 decoder layer, with this result coming from the 3-Encoder layer experiment. This is interesting because it indicates that, when you have a lot of encoder layers, you need a lot of decoder layers as well.\n",
     "\n",
-    "6. After this, we trained our optimal model on 1% of the dataset and achieved a final validation accuracy of 96.4%, which indicates that we have trained a successful model. Then, we manually classified several sentences to gain some indication about how our model is making its decisions. What we learned is listed below:\n",
+    "6. After this, we trained our optimal model on 1% of the dataset and achieved a final validation accuracy of 96.4%, which indicates that we have trained a successful model. Then, we manually classified several sentences to gain some indication about how our model is making its decisions. We  found the interesing result that the Transformer model did not care much about the order of words, which matches our intuition that the Transformer model has a longer memory than the LSTM model. \n",
     "\n",
-    "[INPUT VIVI'S ANALYSIS HERE]h.\n"
+    "h.\n"
    ]
   },
   {
